projects/compiler/test/typechecker/accessor/error_unknown_field.out
Error at %FILE_NAME%:2:3
Unknown field 'foobar'
  |  s.foobar
       ^
No field 'foobar' found on type String
